--- a/WebApplication1/Pages/Movies/Index.cshtml
+++ b/WebApplication1/Pages/Movies/Index.cshtml
@@ -13,7 +13,12 @@
 
 <form>
     <p>
+        <select asp-for="MovieGenre" asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
+
         Title: <input type="text" name="SearchString" />
+
         <input type="submit" value="Filter" />
     </p>
 </form>
@@ -33,6 +38,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Price)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movie[0].Rating)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -50,6 +58,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
